--- a/app/app.component.css
+++ b/app/app.component.css
@@ -58,3 +58,10 @@ linklist {
   right: 10px;
   top: -26px;
 }
+
+.checkbox {
+  font-size: 18px;
+  position: absolute;
+  top: 8px;
+  left: 36%;
+}
