--- a/app/app.component.html
+++ b/app/app.component.html
@@ -184,21 +184,19 @@
   <p>Use angular bindings like normal for variable output.</p>
   <example>
     <div code>
-      <codeblock markup theme="okaidia" [lineNumbers]="false">
+      <codeblock markup theme="okaidia" [lineNumbers]="false" #cb>
         Name: &lt;input type="text" [(ngModel)]="name">
-        &lt;codeblock markup [lineNumbers]="false" cb>
-          &lt;codeblock javascript>
-            if (name === '{{cb.bind('name')}}') {
-              console.log("Hello, " + name);
-            }
-          &lt;/codeblock>
-        &lt;/codeblock
+        &lt;codeblock javascript>
+          if (name === '{{'name'}}') {
+            console.log("Hello, " + name);
+          }
+        &lt;/codeblock>
       </codeblock>
     </div>
     <div highlighted>
-      Name: <input type="text" [(ngModel)]="name">
+      Name (Change Me!): <input type="text" [(ngModel)]="binding" value="Alice" #in>
       <codeblock javascript>
-        if (name === '{{name}}') {
+        if (name === '{{binding}}') {
           console.log("Hello, " + name);
         }
       </codeblock>
@@ -208,10 +206,7 @@
   <example>
     <div code>
       <codeblock markup theme="okaidia" [lineNumbers]="false">
-        &lt;input type="text" [(ngModel)]="name">
-        &lt;codeblock javascript>
-          &lt;pre>{&lt;/pre>{name}}
-        &lt;/codeblock>
+        &lt;pre>{&lt;/pre>{name}}
       </codeblock>
     </div>
     <div highlighted>
@@ -304,7 +299,7 @@
     <div code>
       <codeblock markup theme="okaidia">
         &lt;codeblock ruby [lineNumbers]="false">
-          No Line numbers
+          # No Line numbers
         &lt;/codeblock>
       </codeblock>
     </div>
@@ -378,7 +373,7 @@
       </codeblock>
     </div>
   </example>
-  <p>If you want to write a fragment of `HTML` with some unmatched tags the angular interpreter is going to fail to load your template. You must change any opening or closing tag angle brackets, <code><</code>, to the html entity version <code>&#38;lt;</code>.</p>
+  <p>If you want to write a fragment of <code>HTML</code> with some unmatched tags the angular interpreter is going to fail to load your template. You must change any opening or closing tag angle brackets, <code><</code>, to the html entity version <code>&#38;lt;</code>.</p>
   <example>
     <div code>
       <codeblock markup theme="okaidia" [lineNumbers]="false">
@@ -400,82 +395,55 @@
     </div>
   </example>
   <p>Dynamically loaded files do not have this limitation.</p>
-  <p>Angular2 Components, such as a <code>codeblock</code> or an </code>ngIf</code>, will be processed by angular before highlighting. If you want to show their preprocessed version in the highlighted section instead of their results they should be escaped.</p>
+  <h4>Angular2 Components</h4>
+  <p>Angular2 Components, such as a <code>codeblock</code> or an <code>ngIf</code>, will be processed by angular before highlighting.</p>
   <example>
     <div code>
       <codeblock markup theme="okaidia" [lineNumbers]="false">
         &lt;codeblock markup>
-          &#38;lt;div *ngIf="true" >A&#38;lt;/div>
+          &lt;div *ngIf="true">A&lt;/div>
         &lt;/codeblock>
       </codeblock>
     </div>
     <div highlighted>
       <codeblock markup [lineNumbers]="false">
-        <div *ngIf="true" >A</div>
+        <div *ngIf="true">A</div>
       </codeblock>
     </div>
   </example>
+  <p>If you want to show the preprocessed version instead of the results use the escaped version.</p>
   <example>
     <div code>
       <codeblock markup theme="okaidia" [lineNumbers]="false">
         &lt;codeblock markup>
-          &amp;#38;lt;div *ngIf="true" >A&amp;#38;lt;/div>
+          &#38;lt;div *ngIf="true">A&#38;lt;/div>
         &lt;/codeblock>
       </codeblock>
     </div>
     <div highlighted>
       <codeblock markup [lineNumbers]="false">
-        &lt;div *ngIf="true" >A&lt;/div>
+        &lt;div *ngIf="true">A&lt;/div>
       </codeblock>
     </div>
   </example>
-  <p><code>Pre</code> tags are removed from markup <code>codeblocks</code>. If you want to show bindings without processing you can either build the result inside the binding or use the `bind` method on a local variable assigned to the <code>codeblock</code>.
+  <h4>Angular2 Bindings</h4>
+  <p><code>Pre</code> tags are removed from markup <code>codeblocks</code>. If you want to show bindings without processing use the `bind` method on a local variable assigned to the <code>codeblock</code>.
 </p>
   <example>
     <div code>
-      <codeblock markup theme="okaidia" [lineNumbers]="false">
-        <!-- build the string you want to  display -->
-        &lt;codeblock markup>
-          &lt;div *ngIf="{{'{{' + expression + '}}'}}">Shown&lt;/div>
-        &lt;/codeblock>
-      </codeblock>
-    </div>
-    <div highlighted>
-      <codeblock markup>
-        <div *ngIf="{{'{{' + expression + '}}'}}">Shown</div>
-      </codeblock>
-    </div>
-  </example>
-  <example>
-    <div code>
-      <codeblock markup theme="okaidia" [lineNumbers]="false">
+      <codeblock markup theme="okaidia" [lineNumbers]="false" #cb1>
         <!-- or use the bind method -->
-        &lt;codeblock markup>
-          &lt;div *ngIf="{{'{{' + expression + '}}'}}">Shown&lt;/div>
+        &lt;codeblock markup #cb>
+          <div>{{bindingExpression}}</div>
         &lt;/codeblock>
       </codeblock>
     </div>
     <div highlighted>
-      <codeblock markup>
-        &lt;div *ngIf="{{'{{' + expression + '}}'}}">Shown&lt;/div>
+      <codeblock markup #cb2>
+        <div>{{cb2.bind('expression')}}</div>
       </codeblock>
     </div>
   </example>
-
-```html
-// build the string you want to  display
-<codeblock markup>
-  &lt;div *ngIf="{{'{{' + expression + '}}'}}">Shown&lt;/div>
-</codeblock>
-
-// or use the bind method
-<codeblock markup #cb>
-  &lt;div *ngIf="{{ cb.bind('expression') }}">Shown&lt;/div>
-</codeblock>
-
-// result
-<div *ngIf="{{expression}}">Shown</div>
-
 </section>
 <section class="feature">
   <h3 link id="shell">Shell</h3>
